Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23094

Multiple calls to a Stored Procedure from another Stored Procedure crashes server

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.4.13, 10.5.4
    • 10.4.16, 10.5.7
    • Parser
    • Win64 (Windows Server 2019)

    Description

      Multiple calls to a Stored Procedure (e.g. from a loop) from another Stored Procedure crashes the database server (i.e. the MariaDB Windows Service stops running). The crash seems to occure on the second call to the inner Stored Procedure.

      This problem has been present in the latest releases of 10.4, and also in the new 10.5.4 .
      MariaDB 10.3 is Ok though.

      //Code Example
      CREATE PROCEDURE SP1
      BEGIN
        DECLARE p INT
       
        SET P = 2;
        WHILE ( p > 0 ) DO
          CALL SP2;
          SET P = P - 1;
        END WHILE;
      END
      

      Attachments

        Issue Links

          Activity

            People

              sanja Oleksandr Byelkin
              bjomol Björn Möller
              Votes:
              2 Vote for this issue
              Watchers:
              10 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: